tests/NormalTests/paczka1/fuzzy1/63639428.err
Error in line 6: xWETbMeiFK S764 37,3
Error in line 7: xWETbMeiFK A408 30,1
Error in line 4: 2ZZk4eXlR1q A408 79,0
Error in line 10: S315 S302 47,8
Error in line 30: xWETbMeiFK S764 29,2
